2008-04-29  Daniel Jacobowitz  <dan@codesourcery.com>

	* elf.c (_bfd_elf_get_dynamic_reloc_upper_bound)
	(_bfd_elf_canonicalize_dynamic_reloc): Find dynamic relocations
	even if they are not loaded.
	* elflink.c (_bfd_elf_init_2_index_sections): Set data_index_section
	first.

2008-04-25  Jay Foad  <jay.foad@gmail.com>

	* reloc16.c (bfd_coff_reloc16_get_value): Add support for
	undefined weak symbols.

2008-04-25  Nick Clifton  <nickc@redhat.com>

	* po/vi.po: Updated Vietnamese translation.

2008-04-23  Paolo Bonzini  <bonzini@gnu.org>

	* aclocal.m4: Regenerate.
	* configure: Regenerate.

2008-04-21  Cary Coutant  <ccoutant@google.com>

	* archive.c (_bfd_write_archive_contents): Fix incorrect use of
	ARFMAG.

2008-04-21  Nathan Sidwell  <nathan@codesourcery.com>

	* elfxx-mips.c (_bfd_mips_vxworks_adjust_dynamic_symbol): Don't
	set the value of undefined symbols in shared objects.
	(_bfd_mips_vxworks_finish_dynamic_symbol): Clear value for
	undefined symbols unless pointer equality is needed.

2008-04-18  Dennis Roberts  <dennis.roberts@sunquestinfo.com>

	* aix5ppc-core.c: Define macros for the default architecture and
	machine for matching core files.
	(xcoff64_core_p): Set the architecture and machine to the default
	values defined in the macros mentioned above.
	* rs6000-core.c: Define macros to determine whether or not the
	core file header uses the core_dumpxx header format.
	(rs6000coff_core_p): Don't match core files that use the
	core_dumpxx header format.

2008-04-16  Pedro Alves  <pedro@codesourcery.com>

	* config.bfd (i[3-7]86-*-dicos*, x86_64-*-dicos*): Add.

2008-04-16  David S. Miller  <davem@davemloft.net>

	* reloc.c (BFD_RELOC_SPARC_GOTDATA_HIX22,
	BFD_RELOC_SPARC_GOTDATA_LOX10, BFD_RELOC_SPARC_GOTDATA_OP_HIX22,
	BFD_RELOC_SPARC_GOTDATA_OP_LOX10, BFD_RELOC_SPARC_GOTDATA_OP): New.
	* libbfd.h: Regnerate.
	* bfd-in2.h: Regenerate.
	* elfxx-sparc.c (_bfd_sparc_elf_howto_table): Add entries for
	GOTDATA relocations.
	(sparc_reloc_map): Likewise.